--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -10,6 +10,11 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>{% block title %}{% endblock %}</title>
+    
+    <link 
+    href="style.css" 
+    rel="stylesheet" 
+    type="text/css" />
 
   </head>
   <body>
