--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -9,6 +9,7 @@
     <p>This is a boileplate flask application which follows the MVC pattern for structuring the project.</p>
   <body>
 
+  {% block content %}
   <div class="scrolling-wrapper">
 
   <div class="card"><h2>
