--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -7,6 +7,8 @@
 {% block content %}
     <h1>Flask MVC</h1>
     <p>This is a boileplate flask application which follows the MVC pattern for structuring the project.</p>
+
+<!-- Write your comments here -->
 <body>
 
   <div class="scrolling-wrapper">
@@ -200,5 +202,7 @@
   </div>
 
   </body>
+<!-- Write your comments here -->
+
 
 {% endblock %}
